# procedural-map-generator

./: .gitignore  CMakeLists.txt  França.ppm  Makefile  README.md  colors.cor  etapa4.txt  main  main.cpp  paleta.cpp  paleta.txt  teste.ppm
assets/examples/raw/: cold.ppm  hot.ppm  neon.ppm
code/include/: color.hpp  image.hpp  input.hpp  map.hpp  menu.hpp  message.hpp  overview.hpp  palette.hpp  point.hpp  style.hpp  utilities.hpp
code/src/: image.cpp  input.cpp  main.cpp  map.cpp  menu.cpp  message.cpp  overview.cpp  palette.cpp  style.cpp  utilities.cpp
images/raw/: earthy.ppm  grey.ppm  pastel.ppm
include/: cor.h  imagem.h  paleta.h  ponto.h  terreno.h
palettes/: cold.txt  earthy.txt  grey.txt  hot.txt  neon.txt  pastel.txt
src/: imagem.cpp  main.cpp  paleta.cpp  terreno.cpp
